<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/write_contact_linear_padding"
    tools:context=".fragment.WriteContacts">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:text="@string/write_contacts_add_contact_text"
        android:textSize="@dimen/write_contact_textview_size" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_contact_edittext_hint" />

    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_contact_edittext_number_phone"
        android:inputType="number"
        android:maxEms="10"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_contact_edittext_email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/write_contact_button_margin"
        android:text="@string/write_contact_button_text" />
</LinearLayout>